--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -499,10 +499,7 @@
 
                     </FrameLayout>
 
-
                 </android.support.v7.widget.CardView>
-
-
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/mental_cardview_help"
@@ -587,11 +584,40 @@
                 </android.support.v7.widget.CardView>
 
 
-                <TextView
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cv_daily_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/mental_cardview_help"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    app:cardCornerRadius="10sp"
+                    app:cardElevation="5sp">
+
+                            <TextView
+                                android:id="@+id/tv_daily_status"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="10sp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:background="@android:color/transparent"
+                                android:fontFamily="@font/lato_bold"
+                                android:gravity="start|center"
+                                android:hint=""
+                                android:textSize="18sp"
+                                android:text="Your Daily Check in"
+                                android:textColor="@color/txt_sub_header_color" />
+                </android.support.v7.widget.CardView>
+
+              <!--  Used in 1st version-->
+
+               <!-- <TextView
                     android:id="@+id/your_data_overview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/mental_cardview_help"
+                    android:layout_below="@id/cv_daily_status"
                     android:layout_marginTop="15sp"
                     android:fontFamily="@font/lato_bold"
                     android:padding="10sp"
@@ -615,7 +641,7 @@
                     android:id="@+id/recyclerview_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/your_data_overview" />
+                    android:layout_below="@id/your_data_overview" />-->
 
 
             </RelativeLayout>
