--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -677,7 +677,7 @@
                     </LinearLayout>
 
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
@@ -685,12 +685,15 @@
                         android:orientation="vertical">
 
                         <android.support.design.widget.TextInputLayout
+                            android:id="@+id/input_state_spinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:visibility="gone"
                             android:layout_weight="1"
                             android:weightSum="4">
 
                             <LinearLayout
+
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical">
@@ -720,7 +723,34 @@
 
 
                         </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/input_state_field"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            >
+                            <!--Can't access Vector drawables directly,that's why putted into another DrawableContainer-->
+                            <!--On the Left or Right of textview or Editext-->
+
+                            <EditText
+                                android:id="@+id/edt_state"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:freezesText="true"
+                                android:hint="@string/identification_screen_prompt_state"
+                                android:imeOptions="actionUnspecified"
+                                android:inputType="textCapWords"
+                                android:maxLength="25"
+                                android:maxLines="1"
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input"/>
+
+                        </android.support.design.widget.TextInputLayout>
+
+
+                    </RelativeLayout>
 
                 </LinearLayout>
 
