--- a/app/src/main/res/xml/network_security_configuration.xml
+++ b/app/src/main/res/xml/network_security_configuration.xml
@@ -3,6 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">intelehealth.io</domain>
         <domain includeSubdomains="true">intelesafe.covidhelp.in</domain>
+        <domain includeSubdomains="true">testintelesafe.covidhelp.in</domain>
         <domain includeSubdomains="true">165.227.97.214</domain>
         <domain includeSubdomains="true">13.228.184.65</domain>
         <domain includeSubdomains="true">13.232.32.249</domain>
