Login & sign up flow changes for sprint 2.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,8 +59,9 @@
                 android:hint="@string/prompt_email"
                 android:textColorHint="@color/font_black_5"
                 android:imeOptions="actionNext"
-                android:inputType="number"
-                android:maxLength="100"
+                android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
+                android:inputType="text"
+                android:maxLength="8"
                 android:fontFamily="@font/lato_regular"
                 android:theme="@style/MyEditTextTheme"
                 android:textColor="@color/white"
