--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -117,7 +117,8 @@
 
                         <android.support.design.widget.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:visibility="gone">
 
                             <EditText
                                 android:id="@+id/identification_middle_name"
@@ -246,6 +247,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
+                            android:visibility="gone"
                             android:weightSum="2">
 
                             <TextView
@@ -348,6 +350,7 @@
                             <android.support.design.widget.TextInputLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:visibility="gone"
                                 >
 
                                 <EditText
@@ -372,6 +375,7 @@
                             <android.support.design.widget.TextInputLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:visibility="gone"
                                >
 
                                 <EditText
@@ -448,22 +452,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <!-- android:textColor="#50000000"-->
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="0123456789+"
                         android:hint="@string/username"
                         android:imeOptions="actionNext"
-                        android:inputType="none"
+                        android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
+                        android:inputType="text"
                         android:maxLines="1"
-                        android:enabled="false"
-                        android:textColor="#50000000"
-                        android:maxLength="10"
+                        android:maxLength="8"
                         android:nextFocusForward="@id/password"
                         android:textAppearance="@style/sign_up_input"/>
-                        android:maxLines="1"
-                        android:nextFocusForward="@id/password" />
+                       <!-- android:maxLines="1"
+                        android:nextFocusForward="@id/password" />-->
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -566,7 +569,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <EditText
                         android:id="@+id/identification_address1"
@@ -587,7 +591,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <EditText
                         android:id="@+id/identification_address2"
@@ -607,7 +612,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <AutoCompleteTextView
                         android:id="@+id/identification_city"
@@ -682,7 +688,8 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <android.support.design.widget.TextInputLayout
                             android:id="@+id/input_state_spinner"
@@ -729,6 +736,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp"
+
                             >
                             <!--Can't access Vector drawables directly,that's why putted into another DrawableContainer-->
                             <!--On the Left or Right of textview or Editext-->
@@ -831,7 +839,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <EditText
                         android:id="@+id/identification_postal_code"
