profile screen ui

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,9 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E5E5E5"
+    android:orientation="vertical"
     tools:context=".activities.profile.ProfileActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/actionbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="Profile"
+            app:titleTextColor="@color/font_black_0" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="25dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/profile_oval" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="D. Sachdeva"
+            android:textAppearance="@style/profile_name"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="25dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:fontFamily="@font/lato_medium"
+                android:textAppearance="@style/profile_personal_in"
+                android:text="Personal Information" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_regular"
+                    android:background="@null"
+                    android:drawableEnd="@drawable/profile_arrow"
+                    android:drawableRight="@drawable/profile_arrow"
+                    android:drawablePadding="10dp"
+                    android:textAppearance="@style/profile_sub_details"
+                    android:text="Name" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/profile_line"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_regular"
+                    android:background="@null"
+                    android:drawableEnd="@drawable/profile_arrow"
+                    android:drawableRight="@drawable/profile_arrow"
+                    android:drawablePadding="10dp"
+                    android:textAppearance="@style/profile_sub_details"
+                    android:layout_marginTop="10dp"
+                    android:text="Date of Birth" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/profile_line"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_regular"
+                    android:background="@null"
+                    android:drawableEnd="@drawable/profile_arrow"
+                    android:drawableRight="@drawable/profile_arrow"
+                    android:drawablePadding="10dp"
+                    android:textAppearance="@style/profile_sub_details"
+                    android:layout_marginTop="10dp"
+                    android:text="Mobile Number" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:fontFamily="@font/lato_bold"
+                android:textAppearance="@style/profile_personal_in"
+                android:text="Login Details" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_regular"
+                    android:background="@null"
+                    android:drawableEnd="@drawable/profile_arrow"
+                    android:drawableRight="@drawable/profile_arrow"
+                    android:drawablePadding="10dp"
+                    android:textAppearance="@style/profile_sub_details"
+                    android:text="Username" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/profile_line"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_regular"
+                    android:background="@null"
+                    android:drawableEnd="@drawable/profile_arrow"
+                    android:drawableRight="@drawable/profile_arrow"
+                    android:drawablePadding="10dp"
+                    android:textAppearance="@style/profile_sub_details"
+                    android:layout_marginTop="15dp"
+                    android:text="Password" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:fontFamily="@font/lato_bold"
+                android:textAppearance="@style/profile_personal_in"
+                android:text="Address Details" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_regular"
+                    android:background="@null"
+                    android:drawableEnd="@drawable/profile_arrow"
+                    android:drawableRight="@drawable/profile_arrow"
+                    android:drawablePadding="10dp"
+                    android:textAppearance="@style/profile_sub_details"
+                    android:text="Address" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
