--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -126,4 +126,22 @@
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:fontFamily">@font/lato_bold</item>
     </style>
+
+
+
+    <style name="profile_personal_in">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="profile_sub_details">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="profile_name">
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
