--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -126,4 +126,29 @@
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:fontFamily">@font/lato_bold</item>
     </style>
+
+    <style name="assesment_p">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="mark_as_rea">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#2014EB</item>
+    </style>
+
+    <style name="day_5_wed_1">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#4F4F4F</item>
+    </style>
+
+    <style name="start_asses">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#2418EB</item>
+    </style>
+
+    <style name="lorem_ipsum">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
 </resources>
