Title is set to bold.

--- a/app/src/main/res/layout/content_notification_screen.xml
+++ b/app/src/main/res/layout/content_notification_screen.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Assesment Pending"
-                android:fontFamily="@font/lato_medium"
+                android:fontFamily="@font/lato_bold"
                 android:layout_marginStart="@dimen/text_18sp"
                 android:layout_marginTop="14.36dp"
                 android:textAppearance="@style/assesment_p"
@@ -165,7 +165,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Feedback"
-                        android:fontFamily="@font/lato_medium"
+                        android:fontFamily="@font/lato_bold"
                         android:layout_marginStart="@dimen/text_18sp"
                         android:layout_marginTop="14.36dp"
                         android:textAppearance="@style/assesment_p"
